# staking-economics-sim

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  behavior.py  build.sh  compose.yaml  pool_config.yaml  pyproject.toml  requirements.txt  simulation.py  test.py
api_layer/: __init__.py  alchemy.py  beacon.py  beaconcha.py
cadlabs/: Dockerfile  README.md  entrypoint.sh  requirements.txt  test.sh
cadlabs/notebooks/: cadlabs_equivocation_comparison.executed.ipynb  cadlabs_equivocation_comparison.ipynb  experiment.ipynb  setup_path.py  setup_templates.py  test.ipynb  test1.ipynb  test2.ipynb
output/: output.txt
pool_tracker/: __init__.py  accounting.py  beacon_client.py  beaconcha_client.py  cli.py  config.py  execution_client.py  models.py  registry.py  storage.py  tracker.py
shared/: README.md
shared/output/: output.txt
simulator/: Dockerfile  README.md  __init__.py  behavior.py  cadlabs_replication.py  equivocation_attack.py  fetch_hoodi.py  live_dashboard.py  live_dashboard_data.py  network.py  requirements.txt  simulation.py  test.py  validator.py
simulator/output/: output.txt
storage-slot-smoke/: tracker.db
storage-smoke/: tracker.db
tests/: test_accounting.py  test_beacon_client.py  test_beaconcha_client.py  test_cadlabs_replication.py  test_execution_client.py  test_live_dashboard_data.py  test_storage.py  test_tracker.py
